# tracker_bot

./: .gitignore  GEMINI.md  PLAN.md  RUNNING_INSTRUCTIONS.md  main.py  plan.md  plan_steps.md  pyproject.toml  requirements.txt  tracker.db
alembic/: env.py
alembic/versions/: 264edb7aeadc_initial_migration.py  65d1413adc6a_add_user_id_to_activity.py
bot/handlers/: add_activity.py  common.py  download.py  help.py  stats.py  track_activity.py
bot/keyboards/: callback_data.py  inline.py
bot/states/: activity.py
core/: config.py
db/: crud.py  database.py  models.py
src/: main.py
src/bot/handlers/: add_activity.py  common.py  download.py  stats.py  track_activity.py
src/bot/keyboards/: callback_data.py  inline.py  reply.py
src/bot/states/: activity.py
src/core/: config.py
src/db/: crud.py  database.py  models.py
