[project]
name = "tracker-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
